@@ -3,6 +3,7 @@
  * Fix race in lock handling and add timeout support (look in gnome-mime)
  * Support multiple backends from CLI
  * Add translateable backend description support
+ * Some way to store the rollback time for each backend, for GUI purposes
 
 Long-term
  * Add clustering support:
