@@ -1,4 +1,12 @@
+2001-01-25  Bradford Hovinen  <hovinen@ximian.com>
+
+	* location.c (location_rollback_all_to): Increment array index
+
+	* util.c (parse_date): Normalize values
+
 2001-01-24  Bradford Hovinen  <hovinen@ximian.com>
+
+	* config-log.c (do_load): Disabled locking for now
 
 	* archiver-spec: Added fine-grained location management description
 
